fixed videos on safari

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -552,19 +552,33 @@ a {
 	videos page
 */
 
-.player-wrapper {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
+.video-container {
 	max-width: 75rem;
 	margin: auto;
-	aspect-ratio: 16/9;
+}
+
+.video-wrapper {
+	aspect-ratio: 16 / 9;
+}
+
+.video-wrapper iframe {
+	width: 100%;
+	height: 100%;
 }
 
 @supports not (aspect-ratio: 16/9) {
-	.player-wrapper {
-		min-height: 45vh;
+	.video-wrapper {
+		position: relative;
+		height: 0;
+		padding-bottom: 56.25%;
+	}
+
+	.video-wrapper iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 }
 
